# pixelab-rs

./: LICENSE  README.md
pixelab-core/: Cargo.toml
pixelab-core/src/: area.rs  backend.rs  bitmap.rs  color.rs  display_device.rs  error.rs  event.rs  handler.rs  lib.rs  point.rs  widget.rs
pixelab-evdev/: Cargo.toml
pixelab-evdev/src/: lib.rs
pixelab-linux-fb/: Cargo.toml
pixelab-linux-fb/src/: lib.rs
pixelab-rgb8888x1/: Cargo.toml
pixelab-rgb8888x1/src/: lib.rs
pixelab-rgb8888x4/: Cargo.toml
pixelab-rgb8888x4/src/: lib.rs
pixelab-rs/: Cargo.toml
pixelab-rs/src/: lib.rs
pixelab-widgets/: Cargo.toml
pixelab-widgets/src/: label.rs
