[package]
name = "pixelab-rgb8888x1"
version = "0.1.0"
authors = ["ER_Hamed"]
edition = "2021"
license = "MIT"
description = "RGB8888 32bit Bitmap For pixelab-rs"
repository = "https://github.com/ER-hamed/pixelab-rs"
keywords = ["gui", "graphics"]
categories = ["embedded", "graphics"]

[dependencies]
pixelab-core = "0.1.0"
