[package]
name = "pixelab-widgets"
version = "0.1.0"
authors = ["ER_Hamed <er.hamed138@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Basic Widgets For pixelab-rs"
repository = "https://github.com/ER-hamed/pixelab-widgets"
keywords = ["pixelab-rs"]

[dependencies]
pixelab-core = "0.1.0"
